@@ -1,3 +1,8 @@
+2020-02-26  Konrad Kleine <kkleine@redhat.com>
+
+	* debuginfod-client.c (debuginfod_query_server): Handle curl's
+	response code correctly when DEBUGINFOD_URLS begin with file://
+
 2020-02-25  Frank Ch. Eigler  <fche@redhat.com>
 
 	* debuginfod.cxx (parse_opt): Treat -R as if -Z.rpm .
